Closed Bug 256082 Opened 22 years ago Closed 22 years ago

smtp using other server password causes problem if password changes

Categories

(MailNews Core :: Networking: SMTP, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Bienvenu, Assigned: Bienvenu)

Details

(Keywords: fixed-aviary1.0)

Attachments

(2 files)

If smtp is configured to use another server's password, and the user logs onto that server, and then changes that server password, and then sends a message, smtp will use the old, bad password until the user logs onto the other server again. This can cause a lockout on an account because of too many logon attempts.
Attached patch proposed fixSplinter Review
if an smtp logon fails, stop using another server's password for this thunderbird session - this should cause a reprompt for a password by smtp, which will get stored in the stmp server, and used for the duration of the tbird session. The user will also get reprompted for their incoming mail server password - that seems fine to me.
Attachment #156468 - Flags: superreview?(mscott)
Attachment #156468 - Flags: superreview?(mscott) → superreview+
Attachment #156533 - Flags: superreview?(mscott)
fixed on trunk, 1.0 branch, and m4 branch
Status: NEW → RESOLVED
Closed: 22 years ago
Keywords: fixed-aviary1.0
Resolution: --- → FIXED
Attachment #156533 - Flags: superreview?(mscott) → superreview+
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: