mozilla/mailnews/compose/src/nsSmtpServer.cpp
@@ -61,6 +61,7 @@ NS_INTERFACE_MAP_END
 
 nsSmtpServer::nsSmtpServer()
 {
+  m_logonFailed = PR_FALSE;
 }
 
 nsSmtpServer::~nsSmtpServer()
@@ -318,7 +319,7 @@ NS_IMETHODIMP
 nsSmtpServer::GetPassword(char * *aPassword)
 {
     NS_ENSURE_ARG_POINTER(aPassword);
-    if (m_password.IsEmpty())
+    if (m_password.IsEmpty() && !m_logonFailed)
     {
       // try to avoid prompting the user for another password. If the user has set
       // the appropriate pref, we'll use the password from an incoming server, if 
@@ -552,6 +553,7 @@ nsSmtpServer::ForgetPassword()
     NS_ENSURE_SUCCESS(rv,rv);
 
     rv = SetPassword("");
+    m_logonFailed = PR_TRUE;
     return rv;
 }
 
